# TheRustBookExercises

./: .gitignore
collections/: Cargo.toml
collections/src/: employees.rs  main.rs  pig_latin.rs  vectors.rs
fibonacci/src/: main.rs
guessing_game/src/: main.rs
minigrep/src/: lib.rs  main.rs
rectangle/src/: main.rs
rust_server/: Cargo.toml
rust_server/res/: hello.html  sleepy.html
rust_server/src/: lib.rs  main.rs
rust_server/src/http/: body.rs  headers.rs  mod.rs  request.rs  response.rs
rust_server/src/thread_pool/: mod.rs
smart_pointers/src/: box_demo.rs  main.rs
too_many_linked_lists/src/: immutable_stack.rs  lib.rs  ok_stack.rs  safe_double_linked_list.rs  unsafe_double_linked_list.rs
