[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[dependencies]
anyhow = "1.0.75"
linked-hash-map = "0.5.6"
strum = "0.25.0"
strum_macros = "0.25.2"
